# laarma

./: LICENSE  README.md
autoinstall/: README.md  install.sh  pull_image.sh
autoinstall/custom/config/: cam_far_params.yaml  cam_near_params.yaml  cam_thermal_info.yaml  cam_thermal_params.yaml  cyclonedds.xml  detection_trigger_far_params.yaml  detection_trigger_near_params.yaml  detection_trigger_params.yaml  detection_trigger_zoom2_params.yaml  detection_trigger_zoom_params.yaml  event_trigger_config.yaml  img_collage_params.yaml  img_collage_throttle_params.yaml  img_ffmpeg_params.yaml  img_resize_params.yaml  img_yolo_params.yaml  img_yolo_thermal_params.yaml  img_zoom2_params.yaml  img_zoom_params.yaml  logging_event_topics.yaml  logging_telemetry_topics.yaml  logging_throttled_topics.yaml  neuvition_lidar_params.yaml
autoinstall/custom/cron/: laarma_cron  sync.sh  track_voltage.py
autoinstall/custom/docker/: docker-compose.yaml
autoinstall/custom/launch/: camera_far_pipe.launch.py  camera_near_pipe.launch.py  camera_near_pipe_2yolo.launch.py  camera_thermal_pipe.launch.py  data_logging.launch.py  event_trigger.launch.py  image_collage_pipe.launch.py  neuvition_lidar_pipe.launch.py
autoinstall/custom/netplan/: eth0.yaml
autoinstall/custom/scripts/: data_explorer.py  diagnostics.py  gpio.py  hosts-up.sh  logging.sh  logging_throttled.sh  pull_remote_bags.sh
autoinstall/custom/ssh/: sshd_config
autoinstall/custom/systemd/: sensors.service
autoinstall/custom/systemd/ptp4l.service.d/: override.conf
autoinstall/tools/sync/: sync_bags.sh
autoinstall/tools/tagger/: auto_bag_tagger.py  auto_bag_tagger.sh  bag_tagger.py
data_logging/: README.md  package.xml  setup.py
data_logging/config/: basic.yaml  event.yaml
data_logging/data_logging/: base.py  basic_recorder.py  event_recorder.py  video_recorder.py
data_logging/launch/: data_logging.launch.py
drivers/hdr_camera/: CMakeLists.txt  install_sdk.sh  package.xml
drivers/hdr_camera/cmake/: FindARENA.cmake
drivers/hdr_camera/config/: cam_centre_params.yaml  cam_left_params.yaml  cam_rgb8_params.yaml  cam_right_params.yaml  camera_info.yaml
drivers/hdr_camera/launch/: streamer_centre.launch.py  streamer_left.launch.py  streamer_rgb8.launch.py  streamer_right.launch.py
drivers/hdr_camera/src/: cam_streamer.cpp
drivers/neuvition_lidar/: CMakeLists.txt  install_sdk.sh  package.xml
drivers/neuvition_lidar/cmake/: FindNeuvition.cmake
drivers/neuvition_lidar/config/: default.yaml
drivers/neuvition_lidar/include/neuvition_lidar/: handler_allocator.hpp
drivers/neuvition_lidar/launch/: streamer.launch.py
drivers/neuvition_lidar/src/: lidar_streamer.cpp
drivers/thermal_camera/: CMakeLists.txt  install_sdk.sh  package.xml
drivers/thermal_camera/cmake/: FindGigeV.cmake
drivers/thermal_camera/config/: cam_params.yaml
drivers/thermal_camera/launch/: streamer.launch.py
drivers/thermal_camera/src/: cam_streamer.cpp
event_trigger/: package.xml  setup.cfg  setup.py
event_trigger/config/: detection_trigger_params.yaml  event_trigger_params.yaml
event_trigger/event_trigger/: detection_trigger.py  event_trigger.py
event_trigger/launch/: detection_trigger.launch.py  event_trigger.launch.py  trigger.launch.py
image_collage_maker/: CMakeLists.txt  package.xml
image_collage_maker/launch/: example.launch.py
image_collage_maker/src/: collage_maker.cpp
rads_docker/: Dockerfile  build.sh  underlay.repos
yolov8/: CMakeLists.txt  package.xml
yolov8/config/: detect_params.yaml
yolov8/include/yolov8/: common.hpp  yolov8.hpp
yolov8/launch/: detect.launch.py
yolov8/src/: yolov8_detector.cpp
